--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
         <li><a href="#" routerLink="/login">Login</a></li>
         <li><a routerLink="/article">Article</a></li>
         <li><a href="#" routerLink="/administrator">Login</a></li>
+        <li><a href="#" routerLink="/admin/dashboard/journalistcrud">Beheer journalisten</a></li>
       </ul>
     </nav>
   </div>
