--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         <li><a routerLink="/article">Article</a></li>
         <li><a href="#" routerLink="/administrator">Login</a></li>
         <li><a href="#" routerLink="/admin/dashboard/journalistcrud">Beheer journalisten</a></li>
+        <li><a href="#" routerLink="/admin/dashboard/tags">Beheer tags</a></li>
       </ul>
     </nav>
   </div>
