Back-up push before messing with the scss

--- a/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,67 @@
-<p>admin-dashboard works!</p>
+<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+
+
+
+
+    <section id="skills" class="skills">
+      <div class="container">
+
+        <div class="section-title" data-aos="fade-left">
+          <h2>Dashboard administrator</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4 d-flex align-items-stretch">
+            <div class="card">
+              <h4 class="card-header text-center">
+                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fas fa-newspaper fa-stack-1x fa-inverse"></i>
+                </a>
+              </h4>
+              <div class="card-body shadow">
+                <h4 class="card-title">Artikels beheren</h4>
+                <p class="card-text">
+                Dashboard voor het behereren van de artikelen. Beoordeel de artikelen in status "Draft" om ze te kunnen publishen naar de site.
+                </p>
+                <a href="#" routerLink="/admin/dashboard/manageArticles" class="btn btn-primary">Dashboard </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-flex align-items-stretch">
+            <div class="card">
+              <h4 class="card-header text-center">
+                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fas fa-tags fa-stack-1x fa-inverse"></i>
+                </a>
+              </h4>
+              <div class="card-body shadow">
+                <h4 class="card-title">Categorieën beheren</h4>
+                <p class="card-text">
+                  Dashboard voor het behereren van de categorieën. Bekijk huidige categorieën, verwijder, bewerk of voeg toe.
+                </p>
+                <a href="./nature/nature.html" class="btn btn-primary">Nature Collection</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-flex align-items-stretch">
+            <div class="card">
+              <h4 class="card-header text-center">
+                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fas fa-user-circle fa-stack-1x fa-inverse"></i>
+                </a>
+              </h4>
+              <div class="card-body shadow">
+                <h4 class="card-title">Journalisten beheren</h4>
+                <p class="card-text">
+                Dashboard voor het behereren van de journalisten. Bekijk alle journalisten. Bekijk account, verwijder, bewerk of voeg toe.
+                </p>
+                <a href="./nature/nature.html" class="btn btn-primary">Nature Collection</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
