added edit article, journalist dashboard and header

--- a/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,9 +1,6 @@
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
-
-
-
-    <section id="skills" class="skills">
+    <section id="admin-dashboard" class="bootstrapCard">
       <div class="container">
 
         <div class="section-title" data-aos="fade-left">
@@ -14,7 +11,7 @@
           <div class="col-sm-4 d-flex align-items-stretch">
             <div class="card">
               <h4 class="card-header text-center">
-                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                <a href="#" routerLink="/admin/dashboard/journalists" class="fa-stack fa-3x">
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fas fa-newspaper fa-stack-1x fa-inverse"></i>
                 </a>
@@ -24,14 +21,14 @@
                 <p class="card-text">
                 Dashboard voor het behereren van de artikelen. Beoordeel de artikelen in status "Draft" om ze te kunnen publishen naar de site.
                 </p>
-                <a href="#" routerLink="/admin/dashboard/manageArticles" class="btn btn-primary">Dashboard </a>
+                <button routerLink="/admin/dashboard/manageArticles" class="btn btn-primary">Dashboard </button>
               </div>
             </div>
           </div>
           <div class="col-sm-4 d-flex align-items-stretch">
             <div class="card">
               <h4 class="card-header text-center">
-                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                <a href="#" routerLink="/admin/dashboard/journalists" class="fa-stack fa-3x">
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fas fa-tags fa-stack-1x fa-inverse"></i>
                 </a>
@@ -41,14 +38,14 @@
                 <p class="card-text">
                   Dashboard voor het behereren van de categorieën. Bekijk huidige categorieën, verwijder, bewerk of voeg toe.
                 </p>
-                <a href="./nature/nature.html" class="btn btn-primary">Nature Collection</a>
+                <button routerLink="/admin/dashboard/tags" class="btn btn-primary">Dashboard </button>
               </div>
             </div>
           </div>
           <div class="col-sm-4 d-flex align-items-stretch">
             <div class="card">
               <h4 class="card-header text-center">
-                <a href="thomasdergent.com" class="fa-stack fa-3x">
+                <a href="#" routerLink="/admin/dashboard/journalists" class="fa-stack fa-3x">
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fas fa-user-circle fa-stack-1x fa-inverse"></i>
                 </a>
@@ -58,7 +55,7 @@
                 <p class="card-text">
                 Dashboard voor het behereren van de journalisten. Bekijk alle journalisten. Bekijk account, verwijder, bewerk of voeg toe.
                 </p>
-                <a href="./nature/nature.html" class="btn btn-primary">Nature Collection</a>
+                <button routerLink="/admin/dashboard/journalists" class="btn btn-primary">Dashboard </button>
               </div>
             </div>
           </div>
