--- a/src/app/views/login/login/login.component.html
+++ b/src/app/views/login/login/login.component.html
@@ -1,32 +1,46 @@
-<div class="container p-5">
-    <div class="d-flex justify-content-center">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <ngx-alerts></ngx-alerts>   
+
+<div class="container h-100">
+    <div class="d-flex justify-content-center h-100">
         <div class="user_card">
             <div class="d-flex justify-content-center">
-                
-                <h1>Login</h1>
+                <div class="brand_logo_container">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png"
+                        class="brand_logo" alt="Logo">
+                </div>
             </div>
             <div class="d-flex justify-content-center form_container">
-
-                <form (ngSubmit)="onSubmit()">
+                <form ngNativeValidate (ngSubmit)="onSubmit()">
                     <div class="input-group mb-3">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" [(ngModel)]="userLogin.userName" name="userName" placeholder="userName"/>
+                        <input type="text" [(ngModel)]="userLogin.userName" name="userName" class="form-control"
+                            placeholder=" Gebruikersnaam" required/>
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" [(ngModel)]="userLogin.password" name="password" placeholder="password"/>
+                        <input type="password" [(ngModel)]="userLogin.password" name="password" class="form-control"
+                            placeholder="Wachtwoord" required/>
                     </div>
                     <div class="d-flex justify-content-center mt-3 login_container">
                         <button type="submit" [disabled]="submitted" class="btn login_btn">Login</button>
                     </div>
                 </form>
-
             </div>
-            
+
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
                     Nog geen account? <a href="/sign-up" class="ml-2"> Account aanmaken!</a>
@@ -36,7 +50,3 @@
     </div>
 </div>
 
-    
-<div *ngIf="wrong" class="alert alert-danger" role="alert">
-    <h2>Oh oh!</h2> <p>Je gebruikersnaam of wachtwoord was fout. probeer nog eens.</p>
-</div>    
