--- a/src/app/views/manage-tags/manage-tags/manage-tags.component.html
+++ b/src/app/views/manage-tags/manage-tags/manage-tags.component.html
@@ -8,13 +8,18 @@
 
 
 <body>
-    <div class="container">
+    <section id="manage-tags">
+		<div class="container">
+  
+		  <div class="section-title" data-aos="fade-left">
+			<h2>Categorieën beheren</h2>
+		  </div>
         <div class="table-responsive">
             <div class="table-wrapper">
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Categorieën beheren</h2>
+                            <h4>Categorieën</h4>
                         </div>
                         <div class="col-sm-6">
                             <button class="modal-title" (click)="openAdd()" class="btn btn-success"
@@ -127,4 +132,5 @@
             </div>
         </div>
     </div>
+    </section>
 </body>
