--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,5 @@
-<header>
-  <div class="container">
-    <nav>
-      <ul>
-        <li><a href="#" routerLink="/sign-up">Sign-up</a></li>
-        <li><a href="#" routerLink="/login">Login</a></li>
-        <li><a routerLink="/article">Article</a></li>
-        <li><a href="#" routerLink="/administrator">Login</a></li>
-        <li><a href="#" routerLink="/admin/dashboard/journalistcrud">Beheer journalisten</a></li>
-        <li><a href="#" routerLink="/admin/dashboard/tags">Beheer tags</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+<app-header></app-header>
 
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
