--- a/src/app/views/addarticle/addarticle/addarticle.component.html
+++ b/src/app/views/addarticle/addarticle/addarticle.component.html
@@ -1,36 +1,63 @@
-<form>
-    <div class="input-group mb-3">
-        <div class="input-group-append">
-            <span class="input-group-text"></span>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<ngx-alerts></ngx-alerts>
+
+
+<section id="addArticle" class="bootstrapCard">
+    <div class="section-title" data-aos="fade-left">
+        <h2>Artikel toevoegen</h2>
+    </div>
+    <div class="card shadow">
+        <div class="card-body">
+    <div class="container">
+
+        <form ngNativeValidate>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="title">Titel</label>
+                    <input type="text" [(ngModel)]="article.title" name="title" placeholder="Titel" class="form-control"
+                        required />
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="tags">Categorie</label>
+                    <div class="input-group" required>
+                        <select class="custom-select" id="tags" [(ngModel)]="selectedTag" name="tags">
+                            <option selected value="start">-- Categorieën --</option>
+                            <option *ngFor="let tag of tags" [ngValue]="tag.tagID">{{tag.name}}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <label for="shortSummary">Korte inhoud</label>
+                <textarea rows="10" type="text" [(ngModel)]="article.shortSummary" name="shortSummary"
+                    placeholder="Korte inhoud" class="form-control" required></textarea>
+
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="subTitle">Sub titel</label>
+                    <input type="text" [(ngModel)]="article.subTitle" name="subTitle" placeholder="Sub titel"
+                        class="form-control" required />
+                </div>
+                <div class="form-group col-md-6">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="body">Inhoud</label>
+                <textarea rows="20" type="text" [(ngModel)]="article.body" name="body" placeholder="Inhoud"
+                    class="form-control" required></textarea>
+            </div>
+            <button class="btn btn-primary" type="submit" (click)="addArticleDraft()">Opslagen</button>
+            <button class="btn btn-primary" type="submit" (click)="addArticleToReview()">Inzenden</button>
+        </form>
+    </div>
+  </div>
         </div>
-        <input type="text" [(ngModel)]="article.title" name="title" placeholder="title" />
-    </div>
-    <div class="input-group mb-3">
-        <div class="input-group-append">
-            <span class="input-group-text"></span>
-        </div>
-        <input type="text" [(ngModel)]="article.subTitle" name="subTitle" placeholder="subTitle" />
-    </div>
-    <div class="input-group mb-3">
-        <div class="input-group-append">
-            <span class="input-group-text"></span>
-        </div>
-        <input type="text" [(ngModel)]="article.shortSummary" name="shortSummary" placeholder="shortSummary" />
-    </div>
-    <div class="input-group mb-3">
-        <div class="input-group-append">
-            <span class="input-group-text"></span>
-        </div>
-        <input type="text" [(ngModel)]="article.body" name="body" placeholder="body" />
-    </div>
-    <div class="d-flex justify-content-center mt-3 login_container">
-    </div>
-    <div class="input-group">
-        <select class="custom-select" id="tags" [(ngModel)]="selectedTag" name="tags">
-            <option selected value="start">-- Tags --</option>
-            <option *ngFor="let tag of tags" [ngValue]="tag.tagID">{{tag.name}}</option>
-        </select>
-    </div>
-    <button class="btn btn-outline-secondary" type="submit" (click)="addArticleDraft()">Opslagen</button>
-    <button class="btn btn-outline-secondary" type="submit" (click)="addArticleToReview()">Inzenden</button>
-</form>
+</section>
