--- a/src/app/views/sign-up/sign-up/sign-up.component.html
+++ b/src/app/views/sign-up/sign-up/sign-up.component.html
@@ -1,53 +1,66 @@
-<div class="container p-5">
-    <div class="d-flex justify-content-center">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<ngx-alerts></ngx-alerts>
+
+<div class="container h-150">
+    <div class="d-flex justify-content-center h-150">
         <div class="user_card">
             <div class="d-flex justify-content-center">
-
-
-                <h1>Registreren</h1>
+                <div class="brand_logo_container">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png"
+                        class="brand_logo" alt="Logo">
+                </div>
             </div>
             <div class="d-flex justify-content-center form_container">
-
-
-                <form #aanmeldenForm="ngForm" (ngSubmit)="onSubmit()">
+                <form ngNativeValidate (ngSubmit)="onSubmit()">
                     <div class="input-group mb-3">
                         <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-signature"></i></span>
+                            <span class="input-group-text"><i class="fas fa-user-edit"></i></span>
                         </div>
-                        <input type="text" [(ngModel)]="user.firstName" required minlength="2" name="firstName"
-                            placeholder="firstName" />
+                        <input type="text" [(ngModel)]="user.firstName" name="firstName" class="form-control"
+                            placeholder=" Voornaam" required minlength="2"/>
                     </div>
                     <div class="input-group mb-3">
                         <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-signature"></i></span>
+                            <span class="input-group-text"><i class="fas fa-user-edit"></i></span>
                         </div>
-                        <input type="text" [(ngModel)]="user.lastName" required minlength="2" name="lastName"
-                            placeholder="lastName" />
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-at"></i></span>
-                        </div>
-                        <input type="email" [(ngModel)]="user.email" required pattern=".+@+." name="email"
-                            placeholder="email" />
+                        <input type="text" [(ngModel)]="user.lastName" name="lastName" class="form-control"
+                            placeholder=" Achternaam" required minlength="2"/>
                     </div>
                     <div class="input-group mb-3">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" [(ngModel)]="user.userName" required minlength="2" name="userName"
-                            placeholder="userName" />
+                        <input type="text" [(ngModel)]="user.userName" name="userName" class="form-control"
+                            placeholder=" Gebruikersnaam" required minlength="2"/>
                     </div>
-                    <div class="input-group mb-2">
+                    <div class="input-group mb-3">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                        </div>
+                        <input type="email" [(ngModel)]="user.email" name="email" class="form-control"
+                            placeholder=" Email"/>
+                    </div>
+                    <div class="input-group mb-3">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" [(ngModel)]="user.password" required minlength="6" name="password"
-                            placeholder="password" />
+                        <input type="password" [(ngModel)]="user.password" name="password" class="form-control"
+                            placeholder=" Wachtwoord" required />
                     </div>
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <button type="submit" class="btn login_btn">Registreer</button>
+                        <button type="submit" [disabled]="submitted" class="btn login_btn">Registreer</button>
                     </div>
                 </form>
-
             </div>
+        </div>
+    </div>
+</div>
