update before cleaning code

--- a/src/app/views/journalist-crud/journalist-crud/journalist-crud.component.html
+++ b/src/app/views/journalist-crud/journalist-crud/journalist-crud.component.html
@@ -63,7 +63,7 @@
 
 
 		<!-- Add Modal HTML -->
-		<div id="addEmployeeModal" class="modal fade">
+		<div id="addJournalistModal" class="modal fade">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="modal-content">
 					<form ngNativeValidate (ngSubmit)="onSubmit()">
@@ -109,7 +109,7 @@
 		</div>
 
 		<!-- Edit Modal HTML -->
-		<div id="editEmployeeModal" class="modal fade">
+		<div id="editJournalistModal" class="modal fade">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="modal-content">
 					<form ngNativeValidate #f="ngForm">
@@ -158,7 +158,7 @@
 		</div>
 
 		<!-- Delete Modal HTML -->
-		<div id="deleteEmployeeModal" class="modal fade">
+		<div id="deleteJournalistModal" class="modal fade">
 			<div class="modal-dialog  modal-dialog-centered">
 				<div class="modal-content">
 					<form (ngSubmit)="deleteJournalist()">
