--- a/src/app/views/journalist-dashboard/journalist-dashboard/journalist-dashboard.component.html
+++ b/src/app/views/journalist-dashboard/journalist-dashboard/journalist-dashboard.component.html
@@ -59,7 +59,7 @@
 
 
                                     <a *ngIf="article.articleStatus.name=='Published'"
-                                    routerLink="/article/{{article.articleID}}" class="published"
+                                    routerLink="/article/{{article.title}}" class="publish"
                                         data-toggle="modal"><i class="material-icons" data-toggle="tooltip"
                                             title="Published">&#xE88E;</i></a>
                                 </td>
