--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,16 +5,17 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand headerTitle" href="/">UpDate</a>
   <button class="navbar-toggler" type="button" (click)="toggleNavbar()"  data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen, 'navbarOpen': true}" id="navbarNavDropdown">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link"routerLink="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link "routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item"  *ngIf="notLoggedIn==false">
         <a class="nav-link" routerLink="/login">Login</a>
@@ -31,15 +32,6 @@
       <li class="nav-item" *ngIf="user.role.name=='Admin'">
         <a class="nav-link"routerLink="/admin/dashboard">Dashboard</a>
       </li>
-      <li class="nav-item dropdown" dropdown >
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dropdownToggle >
-          Dropdown link 
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" *dropdownMenu >
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+     
     </ul>
   </div>
