--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -22,3 +22,12 @@
         background-color: $platinumColor;
     }
 }
+
+.headerTitle{
+    font-family: 'Orbitron', sans-serif;
+}
+
+.nav-link:hover{
+    color: $lightBlueBackground !important;
+  }
+  
